--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,12 @@
-<div id="root"></div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Map API</title>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
+</html>
