--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
     <title>Map API</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="dark"></div>
   </body>
 </html>
