--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
     <title>Map API</title>
+    <script id="react-dotenv" src="./env.js"></script>
+    <link href="/dist/output.css" rel="stylesheet" />
   </head>
   <body>
-    <div id="root" class="dark"></div>
+    <div id="root"></div>
   </body>
 </html>
